--- a/src/sass/table.sass
+++ b/src/sass/table.sass
@@ -15,6 +15,7 @@
     min-height: 20px
     height: $row-height
   .row-info
+    position: relative
     display: flex
     place-content: center
     place-items: center
@@ -24,9 +25,12 @@
     background-color: #f8f9fa
     border-top: none
     border-left: none
+    user-select: none
   .row-data
     display: flex
   .column
+    user-select: none
+    position: relative
     display: flex
     place-content: center
     place-items: center
@@ -51,5 +55,27 @@
 
     &.selected
       border: none
-      outline: 2px solid #3c74ff
+      outline: 2px solid $primary-color
       z-index: 2
+
+  .col-resize, .row-resize
+    position: absolute
+    bottom: 0
+    right: 0
+    opacity: 0
+    background-color: $primary-color
+    transition: opacity .1s
+    z-index: 1000
+    &:hover
+      opacity: 1
+
+  .col-resize
+    top: 0
+    width: 4px
+    &:hover
+      cursor: col-resize
+  .row-resize
+    left: 0
+    height: 4px
+    &:hover
+      cursor: row-resize
