--- a/src/sass/dashboard.sass
+++ b/src/sass/dashboard.sass
@@ -53,21 +53,18 @@
     padding: 0 12px
   &__list
     @include clear-list()
-  &__record
+  &__record > a
     display: flex
     place-content: space-between
     place-items: center
     padding: 12px 14px 12px 16px
     margin-bottom: 10px
+    transition: background-color .1s
+    border-radius: 6px
+    text-decoration: none
+    color: #202124
 
     &:hover
       background-color: #e6f4ea
-      border-radius: 25px
-    a
-      text-decoration: none
-      cursor: pointer
-      color: #202124
+    span
       font-size: 14px
-
-      &:hover
-        text-decoration: underline
